add bid and ask function

--- a/cyptoCurrencyAutoTrading/autoTradingUpbit_v1.ipynb
+++ b/cyptoCurrencyAutoTrading/autoTradingUpbit_v1.ipynb
@@ -97,6 +97,99 @@
    "source": [
     "getCoinAmount('TRX')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee2e26d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bid(coin, price) :\n",
+    "    query = {\n",
+    "        'market': 'KRW-' + coin,\n",
+    "        'side': 'bid',  # buy\n",
+    "        #'volume': '0.01',\n",
+    "        'price': str(price),\n",
+    "        'ord_type': 'price', # buy\n",
+    "    }\n",
+    "    query_string = urlencode(query).encode()\n",
+    "\n",
+    "    m = hashlib.sha512()\n",
+    "    m.update(query_string)\n",
+    "    query_hash = m.hexdigest()\n",
+    "\n",
+    "    payload = {\n",
+    "        'access_key': ACCESS_KEY,\n",
+    "        'nonce': str(uuid.uuid4()),\n",
+    "        'query_hash': query_hash,\n",
+    "        'query_hash_alg': 'SHA512',\n",
+    "    }\n",
+    "\n",
+    "    jwt_token = jwt.encode(payload, SECRET_KEY)\n",
+    "    authorize_token = 'Bearer {}'.format(jwt_token)\n",
+    "    headers = {\"Authorization\": authorize_token}\n",
+    "\n",
+    "    res = requests.post(SERVER_URL+'/v1/orders', params=query, headers=headers)\n",
+    "    print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5a83f0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bid('ETH', 20000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "289f4507",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ask(coin, volume) :\n",
+    "    query = {\n",
+    "        'market': 'KRW-' + coin,\n",
+    "        'side': 'ask',  # sell\n",
+    "        'volume': str(volume),\n",
+    "        #'price': '100000',\n",
+    "        'ord_type': 'market', # sell\n",
+    "    }\n",
+    "    query_string = urlencode(query).encode()\n",
+    "\n",
+    "    m = hashlib.sha512()\n",
+    "    m.update(query_string)\n",
+    "    query_hash = m.hexdigest()\n",
+    "\n",
+    "    payload = {\n",
+    "        'access_key': ACCESS_KEY,\n",
+    "        'nonce': str(uuid.uuid4()),\n",
+    "        'query_hash': query_hash,\n",
+    "        'query_hash_alg': 'SHA512',\n",
+    "    }\n",
+    "\n",
+    "    jwt_token = jwt.encode(payload, SECRET_KEY)\n",
+    "    authorize_token = 'Bearer {}'.format(jwt_token)\n",
+    "    headers = {\"Authorization\": authorize_token}\n",
+    "    \n",
+    "    res = requests.post(SERVER_URL+'/v1/orders', params=query, headers=headers)\n",
+    "    print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0f4df17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "volume = getCoinAmount('ETH')\n",
+    "ask('ETH', volume)"
+   ]
   }
  ],
  "metadata": {
